panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_typedef_is_completed_when_underlying_type_is_completed.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_typedef_is_completed_when_underlying_type_is_completed.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_is_completed_when_underlying_type_is_completed.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (typedef TypedefT `struct T~1`)
   (struct T~1
      (member x `int`))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration value~4 `struct T~1`
            (braced
               (designation ((member x)) 4)))
         (return
            (dot x
               (name value~4 `struct T~1`))))))

----- stderr -----
