panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_typedef_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_typedef_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_struct.c"
   (struct T~0
      (member x `int`))
   (typedef Name `struct T~0 complete`)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration value~3 `struct T~0 complete`
            (braced
               42))
         (return
            (dot x
               (name value~3 `struct T~0 complete`))))))

----- stderr -----
