panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__typedef__test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c"
   (typedef a `int`)
   (function-definition
      f~0 `fn(a: int) -> int`
      (params
         a~2 `int`)
      (compound-statement
         (return (name a~2 `int`))))
   (declaration global_value~3 `int` 42)
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (return
            (call (name f~0 `fn(a: int) -> int`)
               (name global_value~3 `int`))))))

----- stderr -----
